--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="imagenes/h4.png" alt="Ejemplo" id="miImagen">
+        </div>
+        <div class="titulo">
+            Te ha llegado la carta del búho?
+        </div>
         <div class="menu-icon" id="menuIcon">
             <img src="imagenes/icono_hamburguesa.webp" alt="Menú">
         </div>
     </header>
+    </header>
+   
     <nav id="menuDesplegable" class="menu-desplegable">
         <div class="menu-header"> 
             <div class="menu-title">
@@ -21,20 +29,23 @@
             <img src="imagenes/icono-equis.webp" alt="Cerrar" id="closeMenu">
         </div>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
+            <li><a href="#" id="inicio">Inicio</a></li>
             <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
             <li><a href="#" id="requisitosMatricula">Requisitos de matrícula</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#" id="acercade">Acerca de</a></li>
         </ul>
     </nav>
-    <div class="contenedor-imagen">
-        <img src="imagenes/h4.png" alt="Ejemplo" id="miImagen">
-    </div>
 
     <div id="imagenMatriculaContainer" class="imagen-matricula-container">
         <img src="imagenes/requisitos.png" alt="Requisitos de Matrícula" id="imagenMatricula">
     </div>
+
+    <div id="imagenacercadeContainer" class="imagen-acercade-container">
+        <img src="imagenes/acerca.png" alt="Acerda de" id="imagenacercade">
+    </div>
+
+   
 
     <div class="contenedor-video">
         <video autoplay loop muted playsinline>
