--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <img src="imagenes/icono_hamburguesa.webp" alt="Menú">
         </div>
     </header>
-    </header>
    
     <nav id="menuDesplegable" class="menu-desplegable">
         <div class="menu-header"> 
@@ -37,21 +36,30 @@
         </ul>
     </nav>
 
-    <div id="imagenMatriculaContainer" class="imagen-matricula-container">
-        <img src="imagenes/requisitos.png" alt="Requisitos de Matrícula" id="imagenMatricula">
-    </div>
-
-    <div id="imagenacercadeContainer" class="imagen-acercade-container">
-        <img src="imagenes/acerca.png" alt="Acerda de" id="imagenacercade">
-    </div>
-
-   
-
     <div class="contenedor-video">
         <video autoplay loop muted playsinline>
             <source src="videos/vh1.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
+    </div>
+
+    <div id="titulorequisitomatricula" class="titulo-requisito-matricula">
+        <h3>Requisitos de matricula</h3>
+        <h3>Lee con atencion todos los puntos</h3>
+    </div>
+
+    <div id="imagenMatriculaContainer" class="imagen-matricula-container" style="display: block;">
+        <img src="imagenes/requisitos.png" alt="Requisitos" id="imagenMatricula">
+    </div>
+
+
+    <div id="tituloacercade" class="titulo-acercade">
+        <h2>Acerca de</h2>
+        <h2>Información importante</h2>
+    </div>
+
+    <div id="imagenacercadeContainer" class="imagen-acercade-container" style="display: block;">
+        <img src="imagenes/acerca.png" alt="Acerca de" id="imagenacercade">
     </div>
 
     <script src="scripts/main.js"></script>
